# rust_ocr_vino

./: Cargo.toml  README.md  run_ocr.bat
modelvino/: model.xml
src/: main.rs
